package com.joelallison;

import java.util.ArrayList;
import java.util.List;

public class Stack { //dynamic stack

    private List<String> list = new ArrayList<String>();

    public boolean isEmpty(){
        return list.isEmpty();
    }

}
