@startuml
!pragma layout smetana

abstract class com.joelallison.io.FileHandling {
+ {static} HashMap<String,Tileset> importTilesets(String)
+ {static} String jsonFileToString(String)
+ {static} boolean createFile(String)
+ {static} void writeToFile(String,String[])
+ {static} List<String> readFromFile(String)
+ String[] RGBA2dArrayToStringArray(RGBA[][])
+ {static} String[] mazeToStringArray(int[][],String,boolean,boolean)
+ {static} String[] toFileFormat(String[],String,boolean)
+ String reverseString(String)
+ String intToBinaryString(int,int)
}
class com.joelallison.io.FileHandling.RGBA {
+ int r
+ int g
+ int b
+ int a
+ String toString()
}
class com.joelallison.screens.userInterface.UI {
+ {static} Color defaultBackgroundColor
+ {static} Skin chosenSkin
+ Stage genStage(Stage)
- void setupSkins()
+ void basicPopupMessage(String,String,Stage)
}
class com.joelallison.screens.LoginScreen {
~ SpriteBatch batch
~ Stage menuUIStage
~ ExtendViewport viewport
~ OrthographicCamera camera
~ float stateTime
~ LoginUI userInterface
- String username
+ void show()
+ void render(float)
+ {static} void login()
+ {static} boolean checkPassword()
+ {static} void register()
+ {static} boolean addNewUser()
~ {static} boolean nameAvailable(String)
+ {static} String hashString(String,byte[])
+ {static} byte[] genSalt()
+ void resize(int,int)
+ void pause()
+ void resume()
+ void hide()
+ void dispose()
}
class com.joelallison.Stack {
- List<String> list
+ boolean isEmpty()
}
class com.joelallison.screens.WorldSelectScreen {
~ SpriteBatch batch
~ Stage menuUIStage
~ ExtendViewport viewport
~ OrthographicCamera camera
~ float stateTime
~ WorldUI userInterface
+ {static} String username
+ void show()
+ void render(float)
+ {static} void loadWorldIntoApp(World,String)
+ void resize(int,int)
+ void pause()
+ void resume()
+ void hide()
+ void dispose()
}
class com.joelallison.screens.AppScreen {
~ Stage mainUIStage
+ ExtendViewport viewport
+ {static} OrthographicCamera camera
~ SpriteBatch batch
~ ShapeRenderer sr
+ {static} World world
+ {static} String username
+ {static} int TILE_SIZE
+ {static} int CHUNK_SIZE
+ {static} Vector2 LEVEL_ASPECT_RATIO
+ {static} int LEVEL_ASPECT_SCALAR
+ {static} Vector2 MAP_DIMENSIONS
~ int xPos
+ {static} UserInput userInput
~ float stateTime
+ {static} HashMap<String,Tileset> tilesets
~ AppUI userInterface
+ void render(float)
+ void drawUIShapes()
+ void drawLayers()
+ TextureRegion getTextureForTerrainValue(Layer,int,int)
+ {static} String getLayerType(Layer)
+ void show()
+ void hide()
+ void pause()
+ void resume()
+ void resize(int,int)
+ void dispose()
}
class com.joelallison.screens.userInterface.LoginUI {
~ Label usernameLabel
~ {static} TextField usernameField
~ Label passwordLabel
~ {static} TextField passwordField
~ TextButton loginButton
~ TextButton registerButton
~ TextButton skipButton
+ {static} Label feedbackLabel
~ Table loginTable
+ void genUI(Stage)
+ void createLoginTable()
+ {static} String getUsernameField()
+ {static} String getPasswordField()
}
class com.joelallison.generation.TerrainLayer {
- float scale
- int octaves
- float lacunarity
- int wrap
- boolean invert
+ float[][] valueMap
+ List<Tileset.TerrainTileSpec> tileSpecs
+ {static} float SCALE_MAX
+ {static} float SCALE_MIN
+ {static} int OCTAVES_MAX
+ {static} int OCTAVES_MIN
+ {static} float LACUNARITY_MAX
+ {static} float LACUNARITY_MIN
+ {static} int WRAP_MAX
+ {static} int WRAP_MIN
- void defaultTileValues()
+ void sortTileSpecs()
+ void genValueMap(Long,Vector2,int,int)
+ float getScale()
+ void setScale(float)
+ int getOctaves()
+ void setOctaves(int)
+ float getLacunarity()
+ void setLacunarity(float)
+ int getWrap()
+ void setWrap(int)
+ boolean isInverted()
+ void setInvert(boolean)
+ {static} float[][] genTerrain(long,Vector2,int,int,float,int,float,int,boolean)
+ {static} float inverseLERP(float,float,float)
+ {static} float wrapValue(float,int,boolean)
}
class com.joelallison.user.World {
+ String name
+ ArrayList<Layer> layers
+ Instant dateCreated
~ Instant lastAccessed
+ Long seed
+ void makeLayerNamesUnique()
+ Long getRandomLong(Long)
+ void swapLayers(int,int)
+ Long getLayerSeed(int)
+ Color getClearColor()
+ int layerCount()
}
class com.joelallison.user.Database {
~ {static} Connection connection
~ {static} Statement statement
+ {static} String jdbcURL
+ {static} String username
+ {static} String password
+ {static} void makeConnection(String,String,String)
+ {static} ResultSet doSqlQuery(String)
+ {static} boolean doSqlStatement(String)
+ {static} PreparedStatement doPreparedStatement(String)
+ {static} void closeConnection()
+ {static} void saveWorld(String,World)
~ {static} boolean saveLayer(String,int,String)
}
class com.joelallison.graphics.Tileset {
+ String creator
- String spriteSheet
- Texture spriteSheetTexture
+ int tileSize
- Color baseColor
- String baseColorHex
+ HashMap<String,TileCorners> map
+ void initTileset(String)
+ Color getColor()
+ void setColor(Color)
+ TextureRegion getTileTextureFromName(String)
+ int getActualTileLocation(int)
+ String getSpriteSheetName()
+ void setSpriteSheetName(String)
+ Texture getSpriteSheet()
+ void setSpriteSheet(String)
}
class com.joelallison.graphics.Tileset.TileCorners {
~ int cornerX
~ int cornerY
}
abstract class com.joelallison.graphics.Tileset.TileSpec {
+ String name
}
class com.joelallison.graphics.Tileset.TerrainTileSpec {
+ Float lowerBound
}
class com.joelallison.graphics.Tileset.MazeTileSpec {
+ int orientationID
}
class com.joelallison.Queue {
- String[] array
- int front
- int back
- int size
- int itemsInArray
+ void enQueue(String)
+ String deQueue()
+ String readFront()
+ String[] getArray()
+ int size()
+ boolean isEmpty()
+ boolean isFull()
}
class com.joelallison.screens.StartScreen {
~ SpriteBatch batch
~ Stage stage
+ ExtendViewport viewport
+ OrthographicCamera camera
+ void create()
+ void render()
+ void dispose()
}
class com.joelallison.screens.userInterface.WorldUI {
~ Table containerTable
~ Table worlds
- {static} String PATTERN_FORMAT
~ Dialog newworld
+ void genUI(Stage)
+ void loadWorlds(Stage)
+ TextButton selectWorldButton(String,Instant,Instant,int,Long)
+ {static} void getWorld(String,String,Long,Instant)
+ {static} Dialog newWorldPopup()
}
class com.joelallison.user.UserInput {
~ int xPosition
~ int yPosition
+ void handleInput()
+ int getxPosition()
+ void setxPosition(int)
+ int getyPosition()
+ void setyPosition(int)
}
class com.joelallison.screens.userInterface.AppUI {
# TextButton layerSeedButton
# CheckBox inheritSeedCheck
# Label scaleLabel
# Label octavesLabel
# Label lacunarityLabel
# Label wrapFactorLabel
# Label invertLabel
# CheckBox invertCheck
# Label centerPointLabel
# TextButton centerPointButton
~ String integerFilter
~ Slider scaleSlider
~ Slider octavesSlider
~ Slider lacunaritySlider
~ Slider wrapFactorSlider
# DecimalFormat floatFormat
# DecimalFormat intFormat
# Window generationSettingsPanel
# Window layerPanel
# Label selectedLayerLabel
# Window tilePanel
~ SelectBox tilesetSelect
~ Slider hueSlider
~ VerticalGroup tiles
~ boolean updateTileList
# VerticalGroup layerGroup
~ boolean layersChanged
~ boolean tileDataChanged
~ String helpMsg
# Label controlsTips
# Label topLabel
~ Stage stage
+ {static} int selectedLayerIndex
+ {static} String saveProgress
~ TextButton saveWorldButton
~ Label saveDialogText
~ TextButton exportWorldButton
+ void genUI(Stage)
+ void update(float)
# void doGenerationSettingsPanel()
# void loadTerrainSettings()
# void updateGenerationSettingsPanel()
# void updateGenerationSettingsTerrain()
# void doLayerPanel()
# void updateLayerPanel()
# HorizontalGroup createLayerWidget(Layer)
# void doTilePanel()
+ void genTileList()
# void updateTilePanel()
- HorizontalGroup createTileLine(Tileset,int)
}
class com.joelallison.generation.MazeLayer {
- int width
- int height
- int count
+ int[][] maze
+ List<Tileset.MazeTileSpec> tileSpecs
- void defaultTileValues()
+ void genMaze()
- void recursion(int,int)
- Integer[] generateRandomDirections()
+ int getWidth()
+ void setWidth(int)
+ int getHeight()
+ void setHeight(int)
}
abstract class com.joelallison.io.JsonHandling {
~ {static} Gson gson
+ {static} Tileset tilesetJsonToObject(String)
}
abstract class com.joelallison.generation.Layer {
~ int layerID
# String name
# Long seed
+ String tilesetName
# boolean showLayer
# Vector2 center
+ float hueShift
# boolean inheritSeed
+ void sortTileSpecs()
+ int getLayerID()
+ void setLayerID(int)
+ boolean layerShown()
+ void showLayer(boolean)
+ Vector2 getCenter()
+ void setCenter(Vector2)
+ Long getSeed()
+ void setSeed(Long)
+ String getName()
+ void setName(String)
+ boolean inheritSeed()
+ void setInheritSeed(boolean)
}


com.joelallison.io.FileHandling +.. com.joelallison.io.FileHandling.RGBA
com.joelallison.screens.Screen <|.. com.joelallison.screens.LoginScreen
com.joelallison.screens.Screen <|.. com.joelallison.screens.WorldSelectScreen
com.badlogic.gdx.Screen <|.. com.joelallison.screens.AppScreen
com.joelallison.screens.userInterface.UI <|-- com.joelallison.screens.userInterface.LoginUI
com.joelallison.generation.Layer <|-- com.joelallison.generation.TerrainLayer
com.joelallison.graphics.Tileset +.. com.joelallison.graphics.Tileset.TileCorners
com.joelallison.graphics.Tileset +.. com.joelallison.graphics.Tileset.TileSpec
com.joelallison.graphics.Tileset +.. com.joelallison.graphics.Tileset.TerrainTileSpec
com.joelallison.graphics.TileSpec <|-- com.joelallison.graphics.Tileset.TerrainTileSpec
com.joelallison.graphics.Tileset +.. com.joelallison.graphics.Tileset.MazeTileSpec
com.joelallison.graphics.TileSpec <|-- com.joelallison.graphics.Tileset.MazeTileSpec
com.badlogic.gdx.Game <|-- com.joelallison.screens.StartScreen
com.joelallison.screens.userInterface.UI <|-- com.joelallison.screens.userInterface.WorldUI
com.joelallison.screens.userInterface.UI <|-- com.joelallison.screens.userInterface.AppUI
com.joelallison.generation.Layer <|-- com.joelallison.generation.MazeLayer
@enduml